# podcast-manager.rs

./: Cargo.toml
src/: main.rs  podcast_data.rs
